<resources>
    <string name="app_name">Scape VPN</string>
    <string name="loading">Loading...</string>
    <string name="facebook_Id">11</string>
    <string name="facebook_token">1</string>
    <string name="s_privacy_policy_url">https://www.baidu.com/</string>
    <string name="s_ad_flag">AD</string>
    <string name="s_btn_install">INSTALL</string>
    <string name="s_open_ad_add_time">Connection time is running low. Tap to add 30 minutes.</string>
    <string name="s_profile_empty">Profile is Empty</string>
    <string name="s_invalid_server">Invalid server name</string>
    <string name="service_failed">Failed:</string>
    <string name="s_vpn_permission_denied">Permission denied to create a VPN service</string>
    <string name="s_reboot_required">Failed to start VPN service. You might need to reboot your device.</string>
    <string name="s_traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="s_speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="s_speed">%s/s</string>
    <string name="s_forward_success">Proxy started.</string>
    <string name="s_ok">OK</string>
    <string name="s_connection_state_label">Status Connection</string>
    <string name="s_disconnect">Disconnect</string>
    <string name="s_device_in_china">According to the laws of the relevant countries, the corresponding services cannot be provided in your area. Thank you for your understanding.</string>
    <string name="s_upload_label">UPLOAD</string>
    <string name="s_download_label">DOWNLOAD</string>
    <string name="s_connected">Connected</string>
    <string name="s_not_connected">Not Connected</string>
    <string name="vpn_proxy_loading">VPN configuration file is loading, please wait…</string>
    <string name="s_connection_successful">Connection successful！</string>
    <string name="s_disconnected_successful">You have been disconnected！</string>

</resources>