<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/native_ad_bg"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_ad_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/color_native_img_bg"
            app:cardCornerRadius="8dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_icon_container"
            app:strokeWidth="0dp">

            <com.google.android.gms.ads.nativead.MediaView
                android:id="@+id/media_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_icon_container"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="@color/color_native_img_bg"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_ad_container"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ad_flag"
            android:visibility="gone"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:background="@drawable/native_ad_flag"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/s_ad_flag"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/card_ad_container"
            app:layout_constraintBottom_toBottomOf="@id/card_ad_container" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            style="@style/LinesTvStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/native_ad_tv"
            android:drawablePadding="4dp"
            android:enabled="false"
            android:minWidth="120dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black_333"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toTopOf="@id/body"
            app:layout_constraintLeft_toRightOf="@id/card_icon_container"
            app:layout_constraintRight_toLeftOf="@id/action"
            app:layout_constraintTop_toTopOf="@id/card_icon_container"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="UseCompatTextViewDrawableXml"
            tools:text="@string/app_name"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/body"
            style="@style/LinesTvStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/native_ad_tv"
            android:enabled="false"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/gray_ccc"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/card_icon_container"
            app:layout_constraintLeft_toRightOf="@id/card_icon_container"
            app:layout_constraintRight_toLeftOf="@id/action"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:text="@string/app_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/action"
            style="@style/LinesTvStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/native_ad_action_btn"
            android:enabled="false"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/s_btn_install"
            android:textColor="@color/color_native_tv"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/card_icon_container"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_icon_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.gms.ads.nativead.NativeAdView>
